--- a/package.json
+++ b/package.json
@@ -23,9 +23,8 @@
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/utils": "^3.0.0",
-    "beercss": "^3.7.10",
     "electron-updater": "^6.1.7",
-    "material-dynamic-colors": "^1.1.2"
+    "lucide-react": "^0.453.0"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config-prettier": "^2.0.0",
